--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,11 @@ body {
     padding: 20px;
     color: #333;
 }
+.form_input {
+    display: flex;
+    flex-direction: column;
+    justify-content: even;
+}
 
 h1 {
     text-align: center;
