--- a/templates/addGet.html
+++ b/templates/addGet.html
@@ -9,17 +9,17 @@
 <body>
     <h1>Welcome to My Flask Blog!</h1>
     <form action="/add" method="GET">
-        <div>
+        <div class="form_input">
             <label for="title">Post Title:</label>
-            <input type="text" id="title" name="title" required>
+            <input type="text" id="title" name="title"  value="Enter title" required>
         </div>
-        <div>
+        <div class="form_input">
             <label for="author">Author:</label>
-            <input type="text" id="author" name="author" required>
+            <input type="text" id="author" name="author" value="Enter author" required>
         </div>
-        <div>
+        <div class="form_input">
             <label for="content">Content:</label>
-            <textarea id="content" name="content" rows="4" required></textarea>
+            <textarea id="content" name="content" rows="4" value="Enter text here..." required></textarea>
         </div>
         <button type="submit">Submit Post</button>
     </form>
